--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>EvoCompBio | Michael Mooney</title>
+	<title>Michael Mooney, PhD</title>
 	<style>
 		body 				{background-color:lightgray; margin:0px}
 		.imageBox			{width:900px; height:125px; padding:0px; margin:0px; vertical-align:bottom; background-color:#3F3F3F}
@@ -23,7 +23,8 @@
 <body>
 	<table class="mainTable">
 	<tr>
-		<td class="imageBox" colspan=4><a href="./index.html"><img style="float:left; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px" src="./logo.gif"></a><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
+		<!--<td class="imageBox" colspan=4><a href="./index.html"><img style="float:left; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px" src="./logo.gif"></a><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td> -->
+		<td class="imageBox" colspan=4><div style="height: 70px; width:425px; line-height:70px; background-color: #006644; color: white; font-family: impact; font-size: 44px; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px">Michael Mooney, Ph.D.</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
 	</tr>
 	<tr>
 		<td class="curItem"><a class="curItem" href="./index.html">ABOUT</a></td>
@@ -35,10 +36,10 @@
 		<td class="tableBody" colspan=4>
 		<div itemscope itemtype="http://data-vocabulary.org/Person">
 		<p><img style="float:left; margin:0px 10px 10px 0px" width="140" src="./me_gorilla.jpg" alt="Me and a gorilla of the Rushegura group in Bwindi Impenetrable National Park, Uganda.", title="Me and a gorilla of the Rushegura group in Bwindi Impenetrable National Park, Uganda.">
-		<span itemprop="name">Michael Mooney</span> is currently a <span itemprop="title">Postdoctoral Fellow</span> and <span itemprop="role">instructor</span> in the <span itemprop="affiliation">Department of Medical Informatics & Clinical Epidemiology</span> at <span itemprop="affiliation">Oregon Health & Science University</span> (OHSU). His research focuses on the development of computational and statistical methods for revealing how genetic variation influences complex diseases. 
+		<span itemprop="name">Michael Mooney</span> is currently an <span itemprop="title">Assistant Professor</span> in the <span itemprop="affiliation">Department of Medical Informatics & Clinical Epidemiology</span> at <span itemprop="affiliation">Oregon Health & Science University</span> (OHSU). His research focuses on the development of computational and statistical methods for revealing how genetic variation influences complex diseases. 
 		Specifically, he is working to improve techniques for mining integrated data sets (containing both genomic and clinical/environmental variables) with the goal of developing predictive models of disease risk and outcome. On the computational side, he is particularly interested in applying evolutionary computation (nature-inspired algorithms), such as genetic algorithms, to the problem of identifying polygenic risk profiles for complex diseases. </p>
 		</div>
-		<p>For more info about Dr. Mooney and his research see the links below or click the "Research" link above.</p>
+		<!-- <p>For more info about Dr. Mooney and his research see the links below or click the "Research" link above.</p> -->
 		</td>
 	</tr>
 	<tr>
@@ -46,13 +47,13 @@
 		<b>Other Info:</b><br />
 		<ul>
 			<li>Dr. Mooney's OHSU profile is <a href="http://www.ohsu.edu/xd/education/schools/school-of-medicine/departments/clinical-departments/dmice/people/michael-mooney.cfm">here</a>.</li>
-			<li>Curriculum vitae: <a href="./cv.html">[HTML]</a> <a href="./mooney_cv.pdf">[PDF]</a></li>
+			<li><a href="./cv.html">Curriculum vitae</a></li> <!-- <a href="./mooney_cv.pdf">[PDF]</a></li> -->
 		</ul>
 		</td>
 	</tr>
 	<tr>
 		<td class="tableBody" colspan=4>
-		<p style="font-family:impact; font-size:16pt; color:#3F3F3F; text-align:center">evolutionary computation + computational biology = evo&middotcomp&middotbio</p>
+			<p style="font-family:impact; font-size:16pt; color:#3F3F3F; text-align:center">evo&middotcomp&middotbio</p>
 		</td>
 	</tr>
 	</table>
