Add research and code pages

--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>Michael Mooney | CV</title>
+	<title>Michael Mooney, PhD | CV</title>
 	<style>
 		body 				{background-color:lightgray; margin:0px}
 		.imageBox			{width:900px; height:125px; padding:0px; margin:0px; vertical-align:bottom; background-color:#3F3F3F}
@@ -22,13 +22,13 @@
 <body>
 	<table class="mainTable">
 	<tr>
-		<td class="imageBox" colspan=4><a href="./index.html"><img style="float:left; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px" src="./logo.gif"></a><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
+		<td class="imageBox" colspan=4><div style="height: 80px; width:425px; line-height:80px; background-color: #295747; color: white; font-family: impact; font-size: 44px; font-weight: lighter; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px">Michael Mooney, PhD</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
 	</tr>
 	<tr>
 		<td class="curItem"><a class="curItem" href="./index.html">ABOUT</a></td>
 		<td class="menuItem"><a class="menuItem" href="./research.html">RESEARCH</a></td>
 		<td class="menuItem"><a class="menuItem" href="./code.html">CODE</a></td>
-		<td class="menuItem"><a class="menuItem" href="./index.html">RESOURCES</a></td>
+		<td class="menuItem"><a class="menuItem" href="./edu.html">EDUCATION</a></td>
 	</tr>
 	<tr>
 		<td class="tableBody" colspan=4>
@@ -122,10 +122,10 @@
 		<p>
 			<ul>
 			<li>Publication list on <a href="https://scholar.google.com/citations?user=cUcjJC8AAAAJ">Google Scholar</a></li>
-			<li><b>Mooney MA</b>, McWeeney SK, Faraone S, Hinney A, Hebebrand J; IMAGE2 Consortium; German ADHD GWAS Group, Nigg JT, Wilmot B. Pathway analysis in attention deficit hyperactivity disorder: An ensemble approach. Am J Med Genet B Neuropsychiatr Genet. 2016 Mar 22. doi: 10.1002/ajmg.b.32446. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/27004716">27004716</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>3.4</b>]</font></li>
-			<li><b>Mooney MA</b>, Wilmot B. Gene set analysis: A step-by-step guide. Am J Med Genet B Neuropsychiatr Genet. 2015 Jun 8. doi: 10.1002/ajmg.b.32328. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/26059482">26059482</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4638147/">PMC4638147</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>3.4</b>]</font></li>
+			<li><b>Mooney MA</b>, McWeeney SK, Faraone S, Hinney A, Hebebrand J; IMAGE2 Consortium; German ADHD GWAS Group, Nigg JT, Wilmot B. Pathway analysis in attention deficit hyperactivity disorder: An ensemble approach. <i>Am J Med Genet B Neuropsychiatr Genet</i>. 2016 Mar 22. doi: 10.1002/ajmg.b.32446. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/27004716">27004716</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>3.4</b>]</font></li>
+			<li><b>Mooney MA</b>, Wilmot B. Gene set analysis: A step-by-step guide. <i>Am J Med Genet B Neuropsychiatr Genet</i>. 2015 Jun 8. doi: 10.1002/ajmg.b.32328. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/26059482">26059482</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4638147/">PMC4638147</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>3.4</b>]</font></li>
 			<li>Joel Eriksson, Dan Evans, Jian Shen, Priya Srikanth, Carrie Nielson, Marc Hochberg, Shannon McWeeney, Peggy Cawthon, Beth Wilmot, Joseph Zmuda, Greg Tranah, Daniel Mirel, Sashi Challa, <b>Michael Mooney</b>, Andrew Crenshaw, Magnus Karlsson, Dan Mellstršm, Liesbeth Vandenput, Eric Orwoll, Claes Ohlsson. Limited Clinical Utility of a Genetic Risk Score for the Prediction of Fracture Risk in Elderly Subjects. <i>Journal of Bone Mineral Research</i>, Jan 2015. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25043339">25043339</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4281709/">PMC4281709</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>6.1</b>]</font></li>
-			<li><b>Mooney MA</b>, Nigg JT, McWeeney SK, Wilmot B. 'Pitfalls in the application of gene set analysis to genetics studies': a response. Trends Genet. 2014 Dec. 30(12):514-5. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25459302">25459302</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4476633/">PMC4476633</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>9.7</b>]</font></li>
+			<li><b>Mooney MA</b>, Nigg JT, McWeeney SK, Wilmot B. 'Pitfalls in the application of gene set analysis to genetics studies': a response. <i>Trends Genet</i>. 2014 Dec. 30(12):514-5. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25459302">25459302</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4476633/">PMC4476633</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>9.7</b>]</font></li>
 			<li><b>Michael A. Mooney</b>, Shannon K. McWeeney, Joel Nigg, Beth Wilmot. Functional and Genomic Context in Pathway Analysis of GWAS Data. <i>Trends in Genetics</i>, 2014, September, 30(9):390-400. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25154796">25154796</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4266582/">PMC4266582</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>9.7</b>]</font></li>
 			<li>Robert Hitzemann, Daniel Bottomly, Ovidiu Iancu, Kari Buck, Beth Wilmot, <b>Michael Mooney</b>, Robert Searles, Christina Zheng, John Belknap, John Crabbe, and Shannon McWeeney. The Genetics of Gene Expression in Complex Mouse Crosses as a Tool to Study the Molecular Underpinnings of Behavior Traits. <i>Mammalian Genome</i>, 2013 Dec 31. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/24374554">24374554</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3916704/">PMC3916704</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>2.4</b>]</font></li>
 			<li><b>Michael Mooney</b> and Shannon McWeeney. "Data Integration and Reproducibility for High-Throughput Transcriptomics" in Brain Transcriptome, International Review of Neurobiology, Volume 116, 2014. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25172471">25172471</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>1.9</b>]</font></li>
