--- a/index.html
+++ b/index.html
@@ -24,30 +24,37 @@
 	<table class="mainTable">
 	<tr>
 		<!--<td class="imageBox" colspan=4><a href="./index.html"><img style="float:left; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px" src="./logo.gif"></a><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td> -->
-		<td class="imageBox" colspan=4><div style="height: 70px; width:425px; line-height:70px; background-color: #006644; color: white; font-family: impact; font-size: 44px; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px">Michael Mooney, Ph.D.</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
+		<td class="imageBox" colspan=4><div style="height: 80px; width:425px; line-height:80px; background-color: #295747; color: white; font-family: impact; font-size: 44px; font-weight: lighter; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px"><span itemprop="name">Michael Mooney</span>, PhD</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
+		<!-- #2d8655 #2e8b57 #306754 -->
 	</tr>
 	<tr>
 		<td class="curItem"><a class="curItem" href="./index.html">ABOUT</a></td>
 		<td class="menuItem"><a class="menuItem" href="./research.html">RESEARCH</a></td>
 		<td class="menuItem"><a class="menuItem" href="./code.html">CODE</a></td>
-		<td class="menuItem"><a class="menuItem" href="./index.html">RESOURCES</a></td>
+		<td class="menuItem"><a class="menuItem" href="./edu.html">EDUCATION</a></td>
 	</tr>
 	<tr>
 		<td class="tableBody" colspan=4>
 		<div itemscope itemtype="http://data-vocabulary.org/Person">
 		<p><img style="float:left; margin:0px 10px 10px 0px" width="140" src="./me_gorilla.jpg" alt="Me and a gorilla of the Rushegura group in Bwindi Impenetrable National Park, Uganda.", title="Me and a gorilla of the Rushegura group in Bwindi Impenetrable National Park, Uganda.">
-		<span itemprop="name">Michael Mooney</span> is currently an <span itemprop="title">Assistant Professor</span> in the <span itemprop="affiliation">Department of Medical Informatics & Clinical Epidemiology</span> at <span itemprop="affiliation">Oregon Health & Science University</span> (OHSU). His research focuses on the development of computational and statistical methods for revealing how genetic variation influences complex diseases. 
-		Specifically, he is working to improve techniques for mining integrated data sets (containing both genomic and clinical/environmental variables) with the goal of developing predictive models of disease risk and outcome. On the computational side, he is particularly interested in applying evolutionary computation (nature-inspired algorithms), such as genetic algorithms, to the problem of identifying polygenic risk profiles for complex diseases. </p>
+		I'm currently an <span itemprop="title">Assistant Professor</span> in the <span itemprop="affiliation">Department of Medical Informatics & Clinical Epidemiology</span> at <span itemprop="affiliation">Oregon Health & Science University</span> (OHSU). My research focuses on the development of computational and statistical methods for revealing how genetic variation influences complex diseases. 
+		Specifically, I'm working to improve techniques for mining integrated data sets (containing both genomic and clinical/environmental variables) with the goal of developing predictive models of disease risk and outcome. On the computational side, I'm particularly interested in applying evolutionary computation (nature-inspired algorithms), such as genetic algorithms, to the problem of identifying polygenic risk profiles for complex diseases. </p>
 		</div>
 		<!-- <p>For more info about Dr. Mooney and his research see the links below or click the "Research" link above.</p> -->
 		</td>
 	</tr>
 	<tr>
 		<td class="tableBody" colspan=4>
-		<b>Other Info:</b><br />
+		<b>More about me:</b><br />
 		<ul>
-			<li>Dr. Mooney's OHSU profile is <a href="http://www.ohsu.edu/xd/education/schools/school-of-medicine/departments/clinical-departments/dmice/people/michael-mooney.cfm">here</a>.</li>
 			<li><a href="./cv.html">Curriculum vitae</a></li> <!-- <a href="./mooney_cv.pdf">[PDF]</a></li> -->
+			<li><a href="http://www.ohsu.edu/xd/education/schools/school-of-medicine/departments/clinical-departments/dmice/people/michael-mooney.cfm">OHSU profile</a></li>
+			<li><a href="https://scholar.google.com/citations?user=cUcjJC8AAAAJ">Google Scholar</a></li>
+			<li><a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/43722896/?sort=date&direction=descending">MyNCBI</a></li>
+			<li><a href="https://www.researchgate.net/profile/Michael_Mooney5">Research Gate</a></li>
+			<li><a href="https://www.linkedin.com/in/michael-mooney-a5904529">LinkedIn</a></li>
+			<li><a href="https://github.com/mooneymi">GitHub</a></li>
+			
 		</ul>
 		</td>
 	</tr>
