--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<table class="mainTable">
 	<tr>
 		<!--<td class="imageBox" colspan=4><a href="./index.html"><img style="float:left; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px" src="./logo.gif"></a><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td> -->
-		<td class="imageBox" colspan=4><div style="height: 80px; width:425px; line-height:80px; background-color: #295747; color: white; font-family: impact; font-size: 44px; font-weight: lighter; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px"><span itemprop="name">Michael Mooney</span>, PhD</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
-		<!-- #2d8655 #2e8b57 #306754 -->
+		<td class="imageBox" colspan=4><div style="height: 80px; width:425px; line-height:80px; background-color: darkslategrey; color: white; font-family: impact; font-size: 44px; font-weight: lighter; text-align: center; float:left; vertical-align: middle; padding: 40px, 0px 0px 40px; border-width:1px; border-style:solid; border-color:dimgrey; margin:25px 0px 0px 25px"><span itemprop="name">Michael Mooney</span>, PhD</div><img style="float:right; margin:0px 75px 0px 0px" src="./dna.gif"></td>
+		<!-- #2d8655 #2e8b57 #306754 #295747 -->
 	</tr>
 	<tr>
 		<td class="curItem"><a class="curItem" href="./index.html">ABOUT</a></td>
