Add PolyGA download

--- a/code.html
+++ b/code.html
@@ -19,7 +19,7 @@
 		.tableBody			{background-color:white; width:900px; padding:10px 20px 10px 20px; font-family:verdana; font-size:10pt; color:black}
 		.figures			{background:white; display:inline-block; width:350px; float:right;}
 	</style>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
 </head>
 <body>
 	<table class="mainTable">
@@ -43,7 +43,7 @@
 		<h2>Software Tools</h2>
 		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
 		<div id="polygafig" class="figures"></div>
-		<script src="./scripts/evocompbio.js"></script>
+		<!-- <script src="./scripts/evocompbio.js"></script> -->
 		<p><b>PolyGA</b> is a Python program that performs a search to identify polygenic signatures (e.g. variant or gene sets) associated with a trait of interest. Candidate feature sets are identified by searching a gene-gene interaction network using a genetic algorithm (GA), which is guided by user-supplied expert knowledge. 
 		<br /><br />
 		Author: Michael Mooney &#x3c;mooneymi at ohsu.edu&#x3e;
