--- a/code/polyga.html
+++ b/code/polyga.html
@@ -56,7 +56,7 @@
 		<b><a name="Downloads">Downloads:</a></b><br />
 		<ul>
 			<li><font style="color: red">NOTE: The following code is experimental and is not guaranteed to be free of bugs.</font></li>
-			<li><a href="./polyGA/polyGA-1.0.tar.gz">PolyGA v1.0</a> (includes python program, sample data, and user manual)</li>
+			<li><a href="./polyga/polyGA-1.0.tar.gz">PolyGA v1.0</a> (includes python program, sample data, and user manual)</li>
 		</ul>
 		</td>
 	</tr>
