Update research and edu links

--- a/edu.html
+++ b/edu.html
@@ -47,7 +47,7 @@
 		<p>
 			<br /><br />
 			<ul>
-			<li></li>
+			<li><a href="https://github.com/mooneymi/jupyter_notebooks">https://github.com/mooneymi/jupyter_notebooks</a></li>
 			</ul>
 		</p>
 		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
