--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
 			<li><b>Michael A. Mooney</b>, Shannon K. McWeeney, Joel Nigg, Beth Wilmot. Functional and Genomic Context in Pathway Analysis of GWAS Data. <i>Trends in Genetics</i>, 2014, September, 30(9):390-400. PMID: <a href="http://www.ncbi.nlm.nih.gov/pubmed/25154796">25154796</a>, PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4266582/">PMC4266582</a><font style="font-family:verdana; font-size:10pt; color:darkred"> [Impact Factor: <b>9.7</b>]</font></li>
 			</ul>
 		</p>
-		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
+		<!-- <hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
 		<h2>Systems Immunogenetics</h2>
 		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
 		<p>
@@ -62,7 +62,7 @@
 			<ul>
 			<li></li>
 			</ul>
-		</p>
+		</p> -->
 		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
 		<h2>Transcriptomics</h2>
 		<hr style="width=850px; height:1px; border:0; background-color:#3F3F3F" />
