Updated intro to DB lecture.

--- a/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
+++ b/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
@@ -5,24 +5,16 @@
     <meta charset="utf-8" />
     <meta name="author" content="Ted Laderas" />
     <meta name="date" content="2020-01-06" />
-    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="libs/xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
 # A Brief Intro to Databases
-### Ted Laderas
-### 2020-01-06
-
----
-
-
-
-class: center, middle
-
-# Disclaimer: I got a C in the Database Course
-## (Now I teach about them)
+### Michael Mooney
+### (based on slides from Ted Laderas)
+### 2022-01-07
 
 ---
 # Learning Objectives
