Update intro to DB lecture.

--- a/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
+++ b/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
@@ -47,7 +47,7 @@ A database can be simple as a collection of flat files
 ---
 # Database Management Systems (DBMS)
 
-Software that allows for the creation, defintion, and manipulation of data in the database
+Software that allows for the creation, definition, and manipulation of data in the database
 
 - accommodates large datasets (storage; querying; indexing)
 - ensures data integrity when multiple users are accessing/modifying it at once (concurrency)
@@ -57,7 +57,7 @@ Software that allows for the creation, defintion, and manipulation of data in th
 ---
 # Relational Data Model
 
-![](image/er_example.jpg)&lt;!-- --&gt;
+![](images/er_example.jpg)&lt;!-- --&gt;
 
 ---
 # Structured Query Language
@@ -74,7 +74,7 @@ Software that allows for the creation, defintion, and manipulation of data in th
 ---
 # Structured Query Language example
 
-![](image/Slide4.JPG)&lt;!-- --&gt;
+![](images/Slide4.JPG)&lt;!-- --&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
