Update intro to DB lecture.

--- a/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
+++ b/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html
@@ -75,6 +75,17 @@ Software that allows for the creation, definition, and manipulation of data in t
 # Structured Query Language example
 
 ![](images/Slide4.JPG)&lt;!-- --&gt;
+
+---
+# NoSQL
+- Sometime referred to as "not-only SQL"
+- Database technologies that rely on data models other than the tabular relations used in relational databases.
+    - Document-oriented databases (a.k.a. document stores)
+    - Graph databases
+
+---
+# More to come
+We will talk much more about relational databases and SQL, as well as other database technologies (NoSQL) later in the term.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
