Update intro lecture.

--- a/large_scale_data/BMI535_Week_1.1.1_Intro.html
+++ b/large_scale_data/BMI535_Week_1.1.1_Intro.html
@@ -185,15 +185,16 @@ class: center, middle
 # Need to protect privacy 
 
 Controlled Access
-  - approved access
+  - approved access (e.g. dbGaP - NCBI database)
   - recording/audited queries
-  - participant based access
+  - participant-based access (study participants grant access to their data)
 
 ---
 # NIH Policy
 
 &lt;img src="images/nih.png" width="1243" /&gt;
 
+https://grants.nih.gov/grants/guide/notice-files/not-od-14-124.html
 ---
 class: center, middle
 
