Update table of contents.

--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -20,9 +20,9 @@
     - Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)
 2. **Week 2**
     - Week 2.1 [Data Structures in Python](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb)
+    - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
 
-
-<!--    - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
+<!--
 3. **Week 3**
     - see Course Materials on Sakai
 4. **Week 4**
