--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -22,13 +22,18 @@
     - Week 2.1 [Data Structures in Python](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb)
     - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
 
-<!--
+<!-- -->
 3. **Week 3**
     - see Course Materials on Sakai
 4. **Week 4**
-
--->
----
+5. **Week 5**
+    - Week 5.1.1 [Installing Postgres](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postres.md)
+    - Week 5.1.2 [Creating a Database](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb)
+    - Week 5.1.2 [Introduction to Postgres SQL](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb)
+    - Week 5.2 [Database Design](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb)
+6. **Week 6**
+    - Week 6.1 [Database Normalization](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb)
+<!-- -->
 
 </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
