--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -15,7 +15,7 @@
 #### Table of Contents
 
 1. **Week 1**
-    - Week 1.1.1 [Course Introduction](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html#1)
+    - Week 1.1.1 [Course Introduction](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html)
     - Week 1.1.2 [Unix Basics](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md)
     - Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)
 2. **Week 2**
@@ -24,6 +24,7 @@
 3. **Week 3**
     - see Course Materials on Sakai
 4. **Week 4**
+    - see Course Materials on Sakai
 5. **Week 5**
     - Week 5.1.1 [Installing Postgres](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postres.md)
     - Week 5.1.2 [Creating a Database](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb)
@@ -31,6 +32,7 @@
     - Week 5.2 [Database Design](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb)
 6. **Week 6**
     - Week 6.1 [Database Normalization](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb)
+
 <!-- -->
 
 </textarea>
