--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -26,7 +26,7 @@
 4. **Week 4**
     - see Course Materials on Sakai
 5. **Week 5**
-    - Week 5.1.1 [Installing Postgres](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postres.md)
+    - Week 5.1.1 [Installing Postgres](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postgres.md)
     - Week 5.1.2 [Creating a Database](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb)
     - Week 5.1.2 [Introduction to Postgres SQL](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb)
     - Week 5.2 [Database Design](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb)
