--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -11,13 +11,17 @@
   <body>
     <textarea id="source">
 
-### BMI 535/635: Management and Processing of Large-scale Data
-#### Table of Contents
+<h3>BMI 535/635: Management and Processing of Large-scale Data</h3>
+<h4>Table of Contents</h4>
 
-1. **Week 1**
-    - Week 1.1.1 [Course Introduction](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html)
-    - Week 1.1.2 [Unix Basics](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md)
-    - Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)
+<ol>
+<li><b>Week 1</b>
+    <ul>
+        <li>Week 1.1.1 [Course Introduction](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html)</li>
+        <li>Week 1.1.2 [Unix Basics](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md)</li>
+        <li>Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)</li>
+    </ul>
+</li>
 2. **Week 2**
     - Week 2.1 [Data Structures in Python](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb)
     - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
@@ -34,8 +38,6 @@
     - Week 6.1 [Database Normalization](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb)
 
      </textarea>
-     <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
-     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
   </body>
 </html>
 
