--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8" />
     <meta name="author" content="Michael Mooney" />
     <meta name="date" content="2022-12-31" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
     <link rel="stylesheet" href="libs/xaringan-themer.css" type="text/css" />
   </head>
   <body>
-    <textarea id="source">
+    <!-- <textarea id="source"> -->
 
 <h3>BMI 535/635: Management and Processing of Large-scale Data</h3>
 <h4>Table of Contents</h4>
@@ -22,6 +21,7 @@
         <li>Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)</li>
     </ul>
 </li>
+</ol>
 2. **Week 2**
     - Week 2.1 [Data Structures in Python](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb)
     - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
@@ -37,7 +37,7 @@
 6. **Week 6**
     - Week 6.1 [Database Normalization](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb)
 
-     </textarea>
+     <!-- </textarea> -->
   </body>
 </html>
 
