--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
-  <head>
+<head>
     <title>Table of Contents</title>
     <meta charset="utf-8" />
     <meta name="author" content="Michael Mooney" />
     <meta name="date" content="2022-12-31" />
     <link rel="stylesheet" href="libs/xaringan-themer.css" type="text/css" />
-  </head>
-  <body>
-    <!-- <textarea id="source"> -->
+</head>
+<body>
 
 <h3>BMI 535/635: Management and Processing of Large-scale Data</h3>
 <h4>Table of Contents</h4>
 
 <ol>
-<li><b>Week 1</b>
-    <ul>
-        <li>Week 1.1.1 [Course Introduction](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html)</li>
-        <li>Week 1.1.2 [Unix Basics](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md)</li>
-        <li>Week 1.2 [Introduction to Databases](https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html)</li>
-    </ul>
+<li><strong>Week 1</strong><ul>
+<li>Week 1.1.1 <a href="https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html">Course Introduction</a></li>
+<li>Week 1.1.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md">Unix Basics</a></li>
+<li>Week 1.2 <a href="https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html">Introduction to Databases</a></li>
+</ul>
+</li>
+<li><strong>Week 2</strong><ul>
+<li>Week 2.1 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb">Data Structures in Python</a></li>
+<li>Week 2.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb">Data Structures in R</a></li>
+</ul>
+</li>
+<li><strong>Week 3</strong><ul>
+<li>see Course Materials on Sakai</li>
+</ul>
+</li>
+<li><strong>Week 4</strong><ul>
+<li>see Course Materials on Sakai</li>
+</ul>
+</li>
+<li><strong>Week 5</strong><ul>
+<li>Week 5.1.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postgres.md">Installing Postgres</a></li>
+<li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb">Creating a Database</a></li>
+<li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb">Introduction to Postgres SQL</a></li>
+<li>Week 5.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb">Database Design</a></li>
+</ul>
+</li>
+<li><strong>Week 6</strong><ul>
+<li>Week 6.1 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb">Database Normalization</a></li>
+</ul>
 </li>
 </ol>
-2. **Week 2**
-    - Week 2.1 [Data Structures in Python](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb)
-    - Week 2.2 [Data Structures in R](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb)
-3. **Week 3**
-    - see Course Materials on Sakai
-4. **Week 4**
-    - see Course Materials on Sakai
-5. **Week 5**
-    - Week 5.1.1 [Installing Postgres](https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postgres.md)
-    - Week 5.1.2 [Creating a Database](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb)
-    - Week 5.1.2 [Introduction to Postgres SQL](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb)
-    - Week 5.2 [Database Design](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb)
-6. **Week 6**
-    - Week 6.1 [Database Normalization](https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb)
-
-     <!-- </textarea> -->
-  </body>
+</body>
 </html>
 
