--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -43,6 +43,17 @@
 <li>Week 6.1 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb">Database Normalization</a></li>
 </ul>
 </li>
+<li><strong>Week 7</strong><ul>
+<li>see Course Materials on Sakai</li>
+<li>Week 7.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_7.1_GATK_Pipeline.md">GATK Pipeline</a></li>
+</ul>
+</li>
+<li><strong>Week 8</strong><ul>
+<li>see Course Materials on Sakai</li>
+<li>Week 8.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.1_Intro_to_Docker.md">Introduction to Docker</a></li>
+<li>Week 8.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.2_Reproducible_Research.md">Reproducible Workflows</li>
+</ul>
+</li>
 </ol>
 </body>
 </html>
