--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -13,45 +13,58 @@
 <h4>Table of Contents</h4>
 
 <ol>
-<li><strong>Week 1</strong><ul>
+<li><strong>Week 1 - Overview / Linux Review</strong><ul>
 <li>Week 1.1.1 <a href="https://mooneymi.github.io/large_scale_data/BMI535_Week_1.1.1_Intro.html">Course Introduction</a></li>
 <li>Week 1.1.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_1.1.2_Unix_Basics.md">Unix Basics</a></li>
 <li>Week 1.2 <a href="https://mooneymi.github.io/large_scale_data/BMI535_Week_1.2_Intro_to_Databases.html">Introduction to Databases</a></li>
 </ul>
 </li>
-<li><strong>Week 2</strong><ul>
+<li><strong>Week 2 - Data Structures in Python and R</strong><ul>
 <li>Week 2.1 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.1_Python_Data_Solutions.ipynb">Data Structures in Python</a></li>
 <li>Week 2.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_2.2_R_Data_Solutions.ipynb">Data Structures in R</a></li>
 </ul>
 </li>
-<li><strong>Week 3</strong><ul>
+<li><strong>Week 3 - High-performance Computing / Exacloud</strong><ul>
+<li>see Course Materials on Sakai</li>
+<li>Week 3.2 <a href="https://laderast.github.io/exacloud_tutorial/">Exacloud Tutorial</a></li>
+</ul>
+</li>
+<li><strong>Week 4 - High-performance Computing, Part 2</strong><ul>
 <li>see Course Materials on Sakai</li>
 </ul>
 </li>
-<li><strong>Week 4</strong><ul>
-<li>see Course Materials on Sakai</li>
-</ul>
-</li>
-<li><strong>Week 5</strong><ul>
+<li><strong>Week 5 - Introduction to SQL</strong><ul>
 <li>Week 5.1.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postgres.md">Installing Postgres</a></li>
 <li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb">Creating a Database</a></li>
 <li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb">Introduction to Postgres SQL</a></li>
 <li>Week 5.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb">Database Design</a></li>
 </ul>
 </li>
-<li><strong>Week 6</strong><ul>
+<li><strong>Week 6 - Database Normalization / SQL Exercises</strong><ul>
 <li>Week 6.1 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_6.1_Database_Normalization.ipynb">Database Normalization</a></li>
 </ul>
 </li>
-<li><strong>Week 7</strong><ul>
+<li><strong>Week 7 - Bioinformatics Pipelines / Variant Calling with GATK</strong><ul>
 <li>see Course Materials on Sakai</li>
 <li>Week 7.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_7.1_GATK_Pipeline.md">GATK Pipeline</a></li>
 </ul>
 </li>
-<li><strong>Week 8</strong><ul>
+<li><strong>Week 8 - Reproducible Research</strong><ul>
 <li>see Course Materials on Sakai</li>
 <li>Week 8.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.1_Intro_to_Docker.md">Introduction to Docker</a></li>
 <li>Week 8.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.2_Reproducible_Research.md">Reproducible Workflows</li>
+</ul>
+</li>
+<li><strong>Week 9 - NoSQL</strong><ul>
+<li>see Course Materials on Sakai</li>
+</ul>
+</li>
+<li><strong>Week 10 - NoSQL Presentations</strong><ul>
+<li>see Course Materials on Sakai</li>
+</ul>
+</li>
+<li><strong>Week 11 - Guest Lecture on Reactome by Dr. Guanming Wu</strong><ul>
+<li>see Course Materials on Sakai</li>
 </ul>
 </li>
 </ol>
