--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -52,14 +52,14 @@
 <li><strong>Week 8 - Reproducible Research</strong><ul>
 <li>see Course Materials on Sakai</li>
 <li>Week 8.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.1_Intro_to_Docker.md">Introduction to Docker</a></li>
-<li>Week 8.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.2_Reproducible_Research.md">Reproducible Workflows</li>
+<li>Week 8.2 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_8.2_Reproducible_Research.md">Reproducible Workflows</a></li>
 </ul>
 </li>
 <li><strong>Week 9 - NoSQL</strong><ul>
 <li>see Course Materials on Sakai</li>
 </ul>
 </li>
-<li><strong>Week 10 - NoSQL Presentations</strong><ul>
+<li><strong>Week 10 - NoSQL Student Presentations</strong><ul>
 <li>see Course Materials on Sakai</li>
 </ul>
 </li>
